# decision-policy-engine

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
examples/: demo_cli.py
src/decision_policy_engine/: __init__.py  models.py
src/decision_policy_engine/audit/: __init__.py  events.py  trace.py
src/decision_policy_engine/decision/: __init__.py  cost.py  router.py
src/decision_policy_engine/policy/: __init__.py  policy_gate.py
tests/: test_audit_chain.py  test_determinism.py  test_no_bidi_unicode.py  test_policy_gate.py  test_router.py  test_smoke_import.py
tools/: fix_github_banner.py  fix_github_unicode_banner.py  normalize_github_unicode_banner.py  normalize_text_files.py  report_hidden_unicode.py  rewrite_flagged_files.py  sanitize_unicode.py
